--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h6 class="fw-bold">Most Popular Free Templates</h6>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-2">
                     <a href="" class="template-box">
                        <img src="./images/templates/1.png" alt="" class="img-fluid">
                        <div class="overlay">
@@ -143,7 +143,7 @@
                           <h6 class="fw-bold txt-ternary">Free</h6>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-2">
                     <a href="" class="template-box">
                        <img src="./images/templates/1.png" alt="" class="img-fluid">
                        <div class="overlay">
@@ -155,7 +155,7 @@
                           <h6 class="fw-bold txt-ternary">Free</h6>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-2">
                     <a href="" class="template-box">
                        <img src="./images/templates/1.png" alt="" class="img-fluid">
                        <div class="overlay">
@@ -167,7 +167,7 @@
                           <h6 class="fw-bold txt-ternary">Free</h6>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-2">
                     <a href="" class="template-box">
                        <img src="./images/templates/1.png" alt="" class="img-fluid">
                        <div class="overlay">
@@ -179,7 +179,7 @@
                           <h6 class="fw-bold txt-ternary">Free</h6>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-2">
                     <a href="" class="template-box">
                        <img src="./images/templates/1.png" alt="" class="img-fluid">
                        <div class="overlay">
@@ -191,7 +191,7 @@
                           <h6 class="fw-bold txt-ternary">Free</h6>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-2">
                     <a href="" class="template-box">
                        <img src="./images/templates/1.png" alt="" class="img-fluid">
                        <div class="overlay">
@@ -234,8 +234,8 @@
                             <small>Address: 135-136, Alek Tower, West Nakhal Para, <br> Tejgaon, Dhaka-1215</small>
                         </p>
                         <p>
-                            <span class="iconify text-white" data-icon="eva:phone-call-fill"></span> :
-                            <small> +880 2 9104628, +880 2 48111557, <br> +8801711524331, +8801677305791</small>
+                            <span class="iconify text-white" data-icon="eva:phone-call-fill"></span>
+                            <small> +880 2 9104628, +880 2 48111557</small>
                         </p>
                         
                     </div>
