--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body >
     
     <!-- header -->
-    <section class="siteHeader sticky-top">
+    <section class="siteHeader sticky-top shadow-sm">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-expand-lg bg-white py-2 bg-light ">
