--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-12 mx-auto text-center">
-                    <h1 class="fs-1 text-center text-dark fw-bold mb-5  rounded d-inline-block mx-auto px-4"> Featured
+                    <h1 class="fs-1 text-center txt-ternary fw-bold mb-5  rounded d-inline-block mx-auto px-4"> Featured
                         Events </h1>
                 </div>
             </div>
@@ -413,7 +413,7 @@
     <section class="templates py-4">
         <div class="container">
             <div class="row my-5">
-                <h4 class="fw-bold text-dark">Most Popular Free Templates</h4>
+                <h4 class="fw-bold text-dark">Website Templates</h4>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-2">
@@ -587,7 +587,7 @@
                     </div>
                 </div> -->
                 <div class="col-md-12 my-5 text-center">
-                    <a class="btn btn-theme" href="#">view more templates</a>
+                    <a class="btn btn-theme-ternary" href="#">view more templates</a>
                 </div>
             </div>
         </div>
