--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <form class="text-center d-flex w-100 mx-auto">
                                 <input type="text" class="form-control text-white py-2 "
                                     placeholder="Artist, Band or Venue">
-                                <button class="btn btn-theme ms-1">Search</button>
+                                <button class="btn btn-theme-ternary ms-1">Search</button>
                             </form>
                             <!-- <a href="#" class="btn btn-theme py-3 btn-large btn-block btn-purple " >
                            Create FREE  Event Website 
@@ -338,7 +338,7 @@
                         </div>
 
                         <div class="col-md-12 my-5 text-center">
-                            <a class="btn btn-theme" href="#">view more events</a>
+                            <a class="btn btn-theme-ternary" href="#">view more events</a>
                         </div>
 
                     </div>
