--- a/index.html
+++ b/index.html
@@ -119,285 +119,7 @@
     </section>
 
 
-    <section class="templates py-5">
-        <div class="container ">
-            <div class="row">
-                <div class="col-md-12 mx-auto text-center">
-                    <h1 class="fs-1 text-center txt-ternary fw-bold mb-5  rounded d-inline-block mx-auto px-4"> Featured
-                        Events </h1>
-                </div>
-            </div>
-            <div class="row g-2 mx-auto">
-                <div class="col-md-12">
-                    <div class="row g-1">
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="ticket-row row text-center g-0 bg-dark rounded  shadow-sm my-1">
-                                <div class="txt-theme bg-dark text-center py-2">
-                                    June 2 2022
-                                </div>
-                                <img src="./images/bands/1701108932The_Wildflowers_2024.jpg" class="img-fluid">
-                                <div class="w-100  pt-3 px-3">
-                                    <a href="" class="event-title">
-                                        America’s Tom Petty <br> Tribute
-                                    </a>
-                                    <div class="row  ">
-                                        <div class="col-md-12">
-                                            <small class="lh-1 d-block my-3">
-                                                comedyworks Performing Arts Center Chester, New
-                                                York
-                                            </small>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 text-center text-md-start"><small>Show at
-                                                <b>8:00PM</b></small>
-                                        </div>
-                                        <div class="col-md-6 text-center text-md-end"><small>Ages <b>18+</b>
-                                                Only</small></div>
-                                    </div>
-                                </div>
-                                <div class="w-100 p-2 text-center   px-3">
-                                    <a href="" class="btn btn-theme-ternary d-block my-2  py-3 text-uppercase">view
-                                        details</a>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="ticket-row row text-center g-0 bg-dark rounded  shadow-sm my-1">
-                                <div class="txt-theme bg-dark text-center py-2">
-                                    June 2 2022
-                                </div>
-                                <img src="./images/bands/1701801392Abba_Revisited_2024.jpg" class="img-fluid">
-                                <div class="w-100  pt-3 px-3">
-                                    <a href="" class="event-title">
-                                        Abba <br> Revisited
-                                    </a>
-                                    <div class="row  ">
-                                        <div class="col-md-12">
-                                            <small class="lh-1 d-block my-3">
-                                                comedyworks Performing Arts Center Chester, New
-                                                York
-                                            </small>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 text-center text-md-start"><small>Show at
-                                                <b>4:00PM</b></small>
-                                        </div>
-                                        <div class="col-md-6 text-center text-md-end"><small>Ages <b>18+</b>
-                                                Only</small></div>
-                                    </div>
-                                </div>
-                                <div class="w-100 p-2 text-center   px-3">
-                                    <a href="" class="btn btn-theme-ternary d-block my-2  py-3 text-uppercase">view
-                                        details</a>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="ticket-row row text-center g-0 bg-dark rounded  shadow-sm my-1">
-                                <div class="txt-theme bg-dark text-center py-2">
-                                    June 2 2022
-                                </div>
-                                <img src="./images/bands/1701805455Sold_out.jpg" class="img-fluid">
-                                <div class="w-100  pt-3 px-3">
-                                    <a href="" class="event-title">
-                                        Abba <br> Revisited
-                                    </a>
-                                    <div class="row  ">
-                                        <div class="col-md-12">
-                                            <small class="lh-1 d-block my-3">
-                                                comedyworks Performing Arts Center Chester, New York
-                                            </small>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 text-center text-md-start"><small>Show at
-                                                <b>4:00PM</b></small>
-                                        </div>
-                                        <div class="col-md-6 text-center text-md-end"><small>Ages <b>18+</b>
-                                                Only</small></div>
-                                    </div>
-                                </div>
-                                <div class="w-100 p-2 text-center   px-3">
-                                    <a href="" class="btn btn-theme-ternary d-block my-2  py-3 text-uppercase">view
-                                        details</a>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="ticket-row row text-center g-0 bg-dark rounded  shadow-sm my-1">
-                                <div class="txt-theme bg-dark text-center py-2">
-                                    February 24 2024
-                                </div>
-                                <img src="./images/bands/1697814283A_Night_On_Broadway_Feb_24.jpg" class="img-fluid">
-                                <div class="w-100  pt-3 px-3">
-                                    <a href="" class="event-title">
-                                        A Night On Broadway: <br> Encore
-                                    </a>
-                                    <div class="row  ">
-                                        <div class="col-md-12">
-                                            <small class="lh-1 d-block my-3">
-                                                comedyworks Performing Arts Center Chester, New York
-                                            </small>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 text-center text-md-start"><small>Show at
-                                                <b>4:00PM</b></small>
-                                        </div>
-                                        <div class="col-md-6 text-center text-md-end"><small>Ages <b>18+</b>
-                                                Only</small></div>
-                                    </div>
-                                </div>
-                                <div class="w-100 p-2 text-center   px-3">
-                                    <a href="" class="btn btn-theme-ternary d-block my-2  py-3 text-uppercase">view
-                                        details</a>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="ticket-row row text-center g-0 bg-dark rounded  shadow-sm my-1">
-                                <div class="txt-theme bg-dark text-center py-2">
-                                    February 29 2024
-                                </div>
-                                <img src="./images/bands/1692629983Wayne_Newton_14.jpg" class="img-fluid">
-                                <div class="w-100  pt-3 px-3">
-                                    <a href="" class="event-title">
-                                        Wayne Newton: Up Close And Personal
-                                    </a>
-                                    <div class="row  ">
-                                        <div class="col-md-12">
-                                            <small class="lh-1 d-block my-3">
-                                                comedyworks Performing Arts Center Chester, New York
-                                            </small>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 text-center text-md-start"><small>Show at
-                                                <b>4:00PM</b></small>
-                                        </div>
-                                        <div class="col-md-6 text-center text-md-end"><small>Ages <b>18+</b>
-                                                Only</small></div>
-                                    </div>
-                                </div>
-                                <div class="w-100 p-2 text-center   px-3">
-                                    <a href="" class="btn btn-theme-ternary d-block my-2  py-3 text-uppercase">view
-                                        details</a>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="ticket-row row text-center g-0 bg-dark rounded  shadow-sm my-1">
-                                <div class="txt-theme bg-dark text-center py-2">
-                                    March 7 2024
-                                </div>
-                                <img src="./images/bands/1698940111Rhythm_Of_The_Dance.jpg" class="img-fluid">
-                                <div class="w-100  pt-3 px-3">
-                                    <a href="" class="event-title">
-                                        Rhythm Of The <br> Dance
-                                    </a>
-                                    <div class="row  ">
-                                        <div class="col-md-12">
-                                            <small class="lh-1 d-block my-3">
-                                                comedyworks Performing Arts Center Chester, New York
-                                            </small>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6 text-center text-md-start"><small>Show at
-                                                <b>4:00PM</b></small>
-                                        </div>
-                                        <div class="col-md-6 text-center text-md-end"><small>Ages <b>18+</b>
-                                                Only</small></div>
-                                    </div>
-                                </div>
-                                <div class="w-100 p-2 text-center   px-3">
-                                    <a href="" class="btn btn-theme-ternary d-block my-2  py-3 text-uppercase">view
-                                        details</a>
-                                </div>
-
-
-
-                            </div>
-                        </div>
-
-                        <div class="col-md-12 my-5 text-center">
-                            <a class="btn btn-theme-ternary" href="#">view more events</a>
-                        </div>
-
-                    </div>
-                </div>
-                <!-- <div class="col-md-3 ">
-                    <div class="bg-white mt-1 rounded p-4">
-
-                        <h4 class=" text-center py-2 text-danger mb-5 bg-dark  rounded d-block mx-auto px-4">Featured
-                            Venue</h4>
-                        <hr>
-                        <div class="venue mb-3">
-                            <a href="#" class="fs-5 link d-block">comedyworks Performing Arts Center Cheste</a>
-                            <small class="">
-                                New York
-                            </small>
-                        </div>
-                        <div class="venue mb-3">
-                            <a href="#" class="fs-5 link d-block"> Koka Booth Amphitheatre</a>
-                            <small class="">
-                                CARY, NC
-                            </small>
-                        </div>
-                        <div class="venue mb-3">
-                            <a href="#" class="fs-5 link d-block">Hopscotch Music Festival </a>
-                            <small class="">
-                                RALEIGH, NC
-                            </small>
-                        </div>
-                        <div class="venue mb-3">
-                            <a href="#" class="fs-5 link d-block">Lincoln Theatre </a>
-                            <small class="">
-                                RALEIGH, NC
-                            </small>
-                        </div>
-                        <div class="venue mb-3">
-                            <a href="#" class="fs-5 link d-block">Virginia International Raceway </a>
-                            <small class="">
-                                DANVILLE, VA
-                            </small>
-                        </div>
-                        <div class="venue mb-3">
-                            <a href="#" class="fs-5 link d-block">North Carolina Jazz Festival - Hotel Ballast
-                                Wilmington</a>
-                            <small class="">
-                                WILMINGTON, NC
-                            </small>
-                        </div>
-                        <div class="venue mb-3">
-                            <a href="#" class="fs-5 link d-block">FMU Performing Arts Center</a>
-                            <small class="">
-                                FLORENCE, SC
-                            </small>
-                        </div>
-                    </div>
-                </div> -->
-
-            </div>
-        </div>
-    </section>
+   
 
 
     <section class="bg-dark py-5 ">
@@ -683,13 +405,13 @@
                         <h5 class="mb-3 txt-ternary">CONTACT US</h5>
                         <p class="d-flex align-items-center">
 
-                            <iconify-icon class="txt-ternary fs-3 me-2" icon="bx:map"></iconify-icon> 231 Creamery Pond
-                            Rd, Chester, NY, 10918
+                            <iconify-icon class="txt-ternary fs-3 me-2" icon="bx:map"></iconify-icon> 
+                            2320 Nott Street East #9301 Niskayuna, NY 12309
                         </p>
                         <p class="d-flex align-items-center">
 
                             <iconify-icon class="txt-ternary fs-3 me-2" icon="iconamoon:email-thin"></iconify-icon>
-                            info@comedyworks.com or wpopailo@thetownofchester.org
+                            info@brandedtix.com
                         </p>
                     </div>
                     <div class="col-lg-4 col-md-4 my-2 py-4">
@@ -703,7 +425,7 @@
 
                             <small> Call for Appt. <br>
 
-                                645-569-7000 x3</small>
+                                1-877-565-3849</small>
                         </p>
 
                     </div>
